--- a/fail2ban/jail-default.conf
+++ b/fail2ban/jail-default.conf
@@ -14,8 +14,7 @@ action = %(action_mwl)s
 [sshd]
 enabled = true
 filter  = sshd
-port    = 1022
-action = %(action_mwl)s
+action   = iptables[name=SSH, port=ssh, protocol=tcp]
 logpath = /var/log/secure
 
 
