--- a/fail2ban/jail-default.conf
+++ b/fail2ban/jail-default.conf
@@ -1,8 +1,6 @@
-
 [DEFAULT]
-banaction = firewallcmd-rich-rules[actiontype=<multiport>]
-banaction_allports = firewallcmd-rich-rules[actiontype=<allports>]
-
+#banaction = firewallcmd-rich-rules[actiontype=<multiport>]
+#banaction_allports = firewallcmd-rich-rules[actiontype=<allports>]
 
 ignoreip = 127.0.0.1/8
 bantime  = 36000
@@ -16,5 +14,3 @@ enabled = true
 filter  = sshd
 action   = iptables[name=SSH, port=ssh, protocol=tcp]
 logpath = /var/log/secure
-
-
